--- a/index.html
+++ b/index.html
@@ -224,56 +224,71 @@
         }
 
         /* Contact Section */
-        .contact-form {
-            max-width: 580px;
-            margin: 0 auto;
+        .contact-container {
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            max-width: 800px;
+            margin: 40px auto;
         }
 
-        .form-group {
-            margin-bottom: 30px;
-        }
-
-        .form-group label {
-            display: block;
-            font-size: 17px;
-            font-weight: 400;
-            margin-bottom: 8px;
-            color: var(--text-secondary);
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 16px;
-            border: 1px solid var(--text-secondary);
-            border-radius: 12px;
+        .contact-card {
             background: var(--bg-secondary);
+            border-radius: 18px;
+            padding: 30px;
+            text-align: center;
+            flex: 1;
+            max-width: 300px;
+            transition: transform 0.3s ease;
+        }
+
+        .contact-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .contact-icon {
+            font-size: 32px;
+            margin-bottom: 15px;
+        }
+
+        .contact-card h3 {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
             color: var(--text-primary);
-            font-size: 17px;
+        }
+
+        .contact-card p {
+            font-size: 16px;
+            color: var(--text-secondary);
+            margin-bottom: 20px;
+        }
+
+        .contact-link {
+            display: inline-block;
+            color: var(--link-color);
+            text-decoration: none;
+            font-size: 16px;
+            font-weight: 500;
             transition: all 0.3s ease;
         }
 
-        .form-group input:focus,
-        .form-group textarea:focus {
-            outline: none;
-            border-color: var(--link-color);
+        .contact-link:hover {
+            transform: translateX(5px);
         }
 
-        .submit-button {
-            background: var(--gradient-start);
-            color: white;
-            border: none;
-            padding: 16px 32px;
-            border-radius: 980px;
-            font-size: 17px;
-            font-weight: 400;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
+        /* Mobile Optimization */
+        @media (max-width: 734px) {
+            .contact-container {
+                flex-direction: column;
+                align-items: center;
+                gap: 20px;
+            }
 
-        .submit-button:hover {
-            background: var(--gradient-end);
-            transform: scale(1.02);
+            .contact-card {
+                width: 100%;
+                max-width: none;
+            }
         }
 
         /* Animations */
@@ -1062,7 +1077,7 @@
                             <div class="tech-item">Deep Learning</div>
                             <div class="tech-item">CNN</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
 
@@ -1077,7 +1092,7 @@
                             <div class="tech-item">Machine Learning</div>
                             <div class="tech-item">Big Data</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
 
@@ -1091,7 +1106,7 @@
                             <div class="tech-item">Scikit-learn</div>
                             <div class="tech-item">Hadoop</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
 
@@ -1106,7 +1121,7 @@
                             <div class="tech-item">Machine Learning</div>
                             <div class="tech-item">Cluster Analysis</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
 
@@ -1120,7 +1135,7 @@
                             <div class="tech-item">Streamlit</div>
                             <div class="tech-item">Python</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
 
@@ -1134,7 +1149,7 @@
                             <div class="tech-item">Numerical Methods</div>
                             <div class="tech-item">Optimization</div>
                         </div>
-                        <a href="#" class="project-link">Learn more</a>
+                        <!-- <a href="#" class="project-link">Learn more</a> -->
                     </div>
                 </div>
             </div>
@@ -1257,21 +1272,20 @@
     <section class="section" id="contact">
         <div class="section-content">
             <h2 class="section-title">Get in Touch</h2>
-            <form class="contact-form">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" required>
+            <div class="contact-container">
+                <div class="contact-card">
+                    <div class="contact-icon">✉️</div>
+                    <h3>Email</h3>
+                    <p>Let's connect via email</p>
+                    <a href="mailto:nabilzaita@outlook.com" class="contact-link">nabilzaita@outlook.com</a>
                 </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                <div class="contact-card">
+                    <div class="contact-icon">💼</div>
+                    <h3>LinkedIn</h3>
+                    <p>Connect with me on LinkedIn</p>
+                    <a href="https://www.linkedin.com/in/zaitanabil/" class="contact-link" target="_blank">View Profile</a>
                 </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="submit-button">Send Message</button>
-            </form>
+            </div>
         </div>
     </section>
 
