--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             text-align: center;
             padding: 0 1rem;
             margin-top: 44px;
+            position: relative;
         }
 
         .hero h1 {
@@ -895,6 +896,38 @@
                 font-size: 16px;
             }
         }
+
+        /* Scroll Indicator */
+        .scroll-indicator {
+            position: absolute;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        .scroll-arrow {
+            color: var(--text-secondary);
+            font-size: 24px;
+            animation: bounce 2s infinite;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+
+        .scroll-arrow:hover {
+            color: var(--link-color);
+        }
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-20px);
+            }
+            60% {
+                transform: translateY(-10px);
+            }
+        }
     </style>
 </head>
 
@@ -927,6 +960,9 @@
         <div class="hero-content">
             <h1>Data Scientist.</h1>
             <p>Transforming data into actionable insights.</p>
+        </div>
+        <div class="scroll-indicator">
+            <div class="scroll-arrow">↓</div>
         </div>
     </section>
 
