--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabil Zaita • Data Scientist</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" as="script">
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" 
+        integrity="sha512-TxZbm+Zk8w3mQYTVHTD1GrReCZ1VjxLMAkGeaBEVAeAvF7i0WkwE3NT4UVyG5DxIYZ6sc0KQEhc/CUf8iJ1Gw==" 
+        crossorigin="anonymous" 
+        referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+        integrity="sha384-..." 
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"></script>
+    <meta name="description" content="Nabil Zaita - Data Scientist specializing in machine learning, deep learning, and data analysis. View my portfolio and projects.">
+    <meta name="keywords" content="Data Scientist, Machine Learning, Deep Learning, Python, Data Analysis">
+    <meta property="og:title" content="Nabil Zaita • Data Scientist">
+    <meta property="og:description" content="Data Scientist specializing in machine learning and data analysis">
+    <meta property="og:image" content="path-to-your-profile-image.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net;
+        style-src 'self' 'unsafe-inline';
+        img-src 'self' data: https:;
+        font-src 'self' data: https:;
+        connect-src 'self';
+        frame-src 'none';
+        object-src 'none';
+        base-uri 'self';
+        form-action 'self';
+        upgrade-insecure-requests;
+    ">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=()">
     <style>
         /* Typography and Reset */
         @font-face {
@@ -15,20 +46,20 @@
         }
 
         :root {
-            --text-primary: #1d1d1f;
+            --text-primary: #f5f5f7;
             --text-secondary: #86868b;
-            --bg-primary: #ffffff;
-            --bg-secondary: #f5f5f7;
+            --bg-primary: #000000;
+            --bg-secondary: #1d1d1f;
             --link-color: #2997ff;
             --gradient-start: #0066cc;
             --gradient-end: #2997ff;
         }
 
-        [data-theme="dark"] {
-            --text-primary: #f5f5f7;
+        [data-theme="light"] {
+            --text-primary: #1d1d1f;
             --text-secondary: #86868b;
-            --bg-primary: #000000;
-            --bg-secondary: #1d1d1f;
+            --bg-primary: #ffffff;
+            --bg-secondary: #f5f5f7;
             --link-color: #2997ff;
         }
 
@@ -929,12 +960,22 @@
             }
         }
     </style>
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "Person",
+        "name": "Nabil Zaita",
+        "jobTitle": "Data Scientist",
+        "url": "https://zaitanabil.github.io/portfolio/",
+        "sameAs": ["https://www.linkedin.com/in/zaitanabil/"]
+    }
+    </script>
 </head>
 
-<body>
+<body data-theme="dark">
     <div class="nav-container">
         <nav>
-            <div class="nav-logo">NZ</div>
+            <div class="nav-logo">Nabil Zaita</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#experience">Experience</a>
@@ -1427,13 +1468,22 @@
             observer.observe(el);
         });
 
-        // Smooth Scrolling
+        // Add this sanitization function
+        function sanitizeInput(input) {
+            return input.replace(/[^\w. ]/gi, '');
+        }
+
+        // Update event listeners to use sanitized input
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
+                const href = sanitizeInput(this.getAttribute('href'));
+                const element = document.querySelector(href);
+                if (element) {
+                    element.scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                }
             });
         });
 
@@ -1482,6 +1532,17 @@
                 navLinks.classList.remove('active');
             }
         });
+
+        // Add smooth reveal animations on scroll
+        const revealElements = document.querySelectorAll('.reveal-on-scroll');
+        const revealOnScroll = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('revealed');
+                }
+            });
+        });
+        revealElements.forEach(element => revealOnScroll.observe(element));
     </script>
 </body>
 
