--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
 <body data-theme="dark">
     <div class="nav-container">
         <nav>
-            <div class="nav-logo">Nabil Zaita</div>
+            <div class="nav-logo">NZ</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#experience">Experience</a>
