--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nabil Zaita • Data Scientist</title>
-    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" as="script">
-    <link rel="preconnect" href="https://cdn.jsdelivr.net">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js" 
-        integrity="sha512-TxZbm+Zk8w3mQYTVHTD1GrReCZ1VjxLMAkGeaBEVAeAvF7i0WkwE3NT4UVyG5DxIYZ6sc0KQEhc/CUf8iJ1Gw==" 
-        crossorigin="anonymous" 
-        referrerpolicy="no-referrer"></script>
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" as="script">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
         integrity="sha384-..." 
         crossorigin="anonymous"
@@ -19,25 +15,6 @@
     <meta name="keywords" content="Data Scientist, Machine Learning, Deep Learning, Python, Data Analysis">
     <meta property="og:title" content="Nabil Zaita • Data Scientist">
     <meta property="og:description" content="Data Scientist specializing in machine learning and data analysis">
-    <meta property="og:image" content="path-to-your-profile-image.jpg">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self';
-        script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net;
-        style-src 'self' 'unsafe-inline';
-        img-src 'self' data: https:;
-        font-src 'self' data: https:;
-        connect-src 'self';
-        frame-src 'none';
-        object-src 'none';
-        base-uri 'self';
-        form-action 'self';
-        upgrade-insecure-requests;
-    ">
-    <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
-    <meta http-equiv="Permissions-Policy" content="camera=(), microphone=(), geolocation=()">
     <style>
         /* Typography and Reset */
         @font-face {
