--- a/index.html
+++ b/index.html
@@ -448,6 +448,12 @@
             transition: transform 0.3s ease, background 0.3s ease;
         }
 
+        @media (max-width: 768px) {
+            .chart-container {
+                padding: 15px;
+            }
+        }
+
         .chart-container:hover {
             transform: scale(1.01);
         }
